[package]
name = "token-primitives"
version = "0.1.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.106", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde/std",
]