[package]
name = "token"
version = "0.1.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-rc5", default-features = false, path = "../../primitives/std" }
sp-runtime = { version = "2.0.0-rc5", default-features = false, path = "../../primitives/runtime" }
frame-support = { version = "2.0.0-rc5", default-features = false, path = "../../frame/support" }
frame-system = { version = "2.0.0-rc5", default-features = false, path = "../../frame/system" }
token-primitives = { path = "../token-primitives", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"token-primitives/std",
]